added flag to compiler to use the C++ 11 features.

--- a/homeworks/hw-2-binary-search-trees/cpp/Makefile
+++ b/homeworks/hw-2-binary-search-trees/cpp/Makefile
@@ -5,7 +5,7 @@ USER_DIR = .
 CPPFLAGS =
 
 # Flags passed to the C++ compiler.
-CXXFLAGS = -g -Wall -Wextra -Wno-write-strings2
+CXXFLAGS = -g -Wall -Wextra -Wno-write-strings2 -std=c++0x
 
 # House-keeping build targets.
 
