A little progress on FSM assignment

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 code/deque/deque_driver
 code/deque/deque_unittest
 homeworks/hw-4-btree-design/dshandbook_BTree.pdf
+code/graph/graph_driver
+code/objects/linked_list
